--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ server.tomcat.uri-encoding=utf-8
 
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bookStore?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=520520cw...
 
@@ -47,3 +46,7 @@ spring.rabbitmq.username=xzwb
 spring.rabbitmq.password=520520cw...
 spring.rabbitmq.virtual-host=/vhost_mmr
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bookStore?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+
+spring.rabbitmq.host=49.234.70.67
