feat(service,controller,pojo): get book by bookId
增加了根据书籍的id查询特定书籍的功能，在pojo包的book类中添加了构造者模式将从es中取出的数据转化成类

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.tomcat.uri-encoding=utf-8
 
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bookStore?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=520520cw...
 
@@ -47,6 +48,6 @@ spring.rabbitmq.password=520520cw...
 spring.rabbitmq.virtual-host=/vhost_mmr
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bookStore?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 
-spring.rabbitmq.host=49.234.70.67
+
+#spring.rabbitmq.host=49.234.70.67
