--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8081
 #编码格式
 server.tomcat.uri-encoding=utf-8
 
+
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookStore?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
@@ -50,4 +51,4 @@ spring.rabbitmq.virtual-host=/vhost_mmr
 
 
 
-spring.rabbitmq.host=49.234.70.67
+#spring.rabbitmq.host=localhost
